<resources>
    <string name="app_name">Last</string>
    <string name="action_settings">Settings</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

     <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

     <string name="empty_view_subtitle_text">Get started by adding a product</string>

     <string name="editor_activity_title_new_product">Add a Product</string>

     <string name="editor_activity_title_edit_product">Edit Product</string>

     <string name="action_save">Save</string>

     <string name="action_delete">Delete</string>

     <string name="editor_insert_product_successful">Product saved</string>

     <string name="editor_insert_product_failed">Error with saving product</string>

     <string name="editor_update_product_successful">Product updated</string>

     <string name="editor_update_product_failed">Error with updating product</string>

     <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

     <string name="discard">Discard</string>

     <string name="keep_editing">Keep Editing</string>

     <string name="editor_delete_product_successful">Product deleted</string>

     <string name="editor_delete_product_failed">Error with deleting product</string>

     <string name="delete_dialog_msg">Delete this product?</string>

     <string name="delete">Delete</string>

     <string name="cancel">Cancel</string>

     <string name="category_overview">Overview</string>

     <string name="category_gender">Gender</string>

     <string name="category_measurement">Measurement</string>

     <string name="hint_product_name">Name</string>

     <string name="hint_product_price">Price</string>

     <string name="hint_product_quantity">Quantity</string>

    <string name="hint_product_supplier">Supplier</string>

    <string name="hint_product_image">Image</string>

     <string name="unit_product_quantity">pieces</string>

     <string name="unit_product_price">euro</string>

    <string name="name_label">Name: </string>

    <string name="quantity_label">Quantity: </string>

    <string name="price_label">Price: </string>

    <string name="supplier_label">Supplier: </string>

    <string name="image_label">Image of Product: </string>

    <string name="plus_button_label">+</string>

    <string name="minus_button_label">-</string>

    <string name="order_button_label">Order more</string>

    <string name="sell_label">Sell </string>

    <!-- Toast messages for Quantity values -->
    <string name="quantity_null_value">Enter value please</string>
    <string name="quantity_negative">Value cannot be negative</string>


    <string name="supplier_email">mailto: supplier@supplier.com</string>
    <string name="supplier_email_subject">Inventory Order</string>
    <string name="supplier_email_text">We would like to order the following number of pieces for </string>

    <string name="dummy_image_uri">android.resource://com.example.android.inventory/drawable/ic_empty_shelter</string>

    <string name="image_required">Image Required</string>
    <string name="name_required">Name Required</string>
    <string name="details_required">Please fill in all fields</string>
</resources>
